trunk/Archive2/44/2bd80e5d1e7e64/output
main.cpp:19:9: error: conversion from 'source' to 'dest' is ambiguous
    foo(s);
        ^
main.cpp:5:5: note: candidate constructor
    dest(source);
    ^
main.cpp:10:5: note: candidate function
    operator dest() const;
    ^
main.cpp:13:14: note: passing argument to parameter here
void foo(dest);
             ^
1 error generated.
